@@ -1,3 +1,6 @@
+Fri Mar  1 01:11:57 CET 2013
+	Fully initialize cleanup mutex struct for each thread. -Ulion
+
 Wed Feb  6 01:51:52 CET 2013
 	Releasing libmicrohttpd 0.9.25. -CG
 
